# k8s-metric-collector

./: .gitignore  README.md  config.py  config.toml  data.py  draw.py  main.py  pyproject.toml  utils.py
pages/: cluster_load.py  load_balance.py  timeline.py
