[project]
name = "metric-collector"
version = "0.1.0"
description = "Simple k8s CPU/RAM collector"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydantic>=2.10.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]
